--- a/templates/home.html
+++ b/templates/home.html
@@ -13,8 +13,8 @@
             {% endif %}
         </header>
 
-        <main class="w-100 d-flex main-block">
-            <section class="left-block">
+        <main class="w-100 d-flex justify-content-between main-block">
+            <section class="left-block" id="style-1">
                 <p>I present to you my project "Django Library" on which I have been working for 3 months.</p>
 
                 <p>I was able to improve all the necessary skills and get closer to my goal of becoming an engineer.</p>
@@ -41,7 +41,7 @@
                     PostgreSQL, HTML & CSS, Bootstrap, Docker, Docker-compose</p>
             </section>
 
-            <aside class="right-block">
+            <aside class="right-block" id="style-1">
                 <p>Hi there!</p>
                 <p>As you can see from the footer - my name is Egor. Yes, I'm in the photo :)</p>
 
@@ -55,7 +55,8 @@
         </main>
 
         <footer class="text-center footer-block">
-            <span>You can find out more about the project on the <a href="">documentation page</a>.</span>
+            <span style="font-size: 14px;">You can find out more about the project on the <a
+                    href="">documentation page</a>.</span>
         </footer>
     </main>
 {% endblock %}
