--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 
         <header class="text-center header-block">
             {% if user.is_authenticated %}
-                <h3>Greetings, {{ user.first_name }} {{ user.last_name }}!</h3>
+                <h3>Вітаю, {{ user.first_name }} {{ user.last_name }}!</h3>
             {% else %}
                 <h3>Greetings, Guest!</h3>
             {% endif %}
@@ -15,42 +15,34 @@
 
         <main class="w-100 d-flex justify-content-between main-block">
             <section class="left-block" id="style-1">
-                <p>I present to you my project "Django Library" on which I have been working for 3 months.</p>
-
-                <p>I was able to improve all the necessary skills and get closer to my goal of becoming an engineer.</p>
-
-                <p>I wanted to make an application that would be as user-friendly as possible, so during the development
-                    I was able to improve my skills in front-end development well, mastered CSS and Bootstrap.</p>
-
-                <p>This project contains 2 types of authorization: directly in the service and through social networks.
-                    All workarounds to the pages are closed, you get access to advanced functionality only after
-                    authorization. You can explore the list of authors and books that the Django Library provides. You
-                    can also order a book, specifying the date when you undertake to return the book.
-                    You will have a profile at your disposal, in which you can enter personal information and set an
-                    avatar.
-                    If you are a developer, you can click on the gear button in your profile to learn how to use the
-                    Django Library API.</p>
-
-                <p>A user can be in one of 4 groups: Guest, User, Librarian, Admin. Each group has its own set of
-                    rights, such as editing, deleting, adding.</p>
-
-                <p>During development, I encountered a number of problems, but in the course of solving them, I
-                    understood more and more the work of the technologies used, I saw my mistakes and shortcomings.</p>
-
-                <p><b>The following technologies were used in the project:</b> Django, Django Rest Framework,
-                    PostgreSQL, HTML & CSS, Bootstrap, Docker, Docker-compose</p>
+                <p>Радий представити Вам проєкт "Django Library”, над яким я працював протягом 3-х місяців.</p>
+                <p>За час розробки я зміг покращити важливі для мене навички і наблизитись до своєї цілі - стати
+                    інженером.</p>
+                <p>Моєю метою було створити застосунок, який би був максимально зручним для користувача, тому я навіть
+                    трішки поглибився у верстку, і засвоїв HTML, CSS та Bootstrap.</p>
+                <p>Цей проєкт містить 2 види авторизації: безпосередньо в сервісі та через соціальні мережі. Всі обхідні
+                    шляхи до сторінок закриті, Ви зможете отримати доступ до поширеного функціоналу тільки після
+                    реєстрації. Як користувач, Ви можете ознайомитись зі списком авторів і книг, котрі представлені
+                    Django Library, а також зарезервувати книгу, вказавши дату коли зобов’язуєтесь її повернути.</p>
+                <p>Ви отримаєте власний профіль, в якому ви зможете вказати особисту інформацію і встановити аватар.</p>
+                <p>Якщо Ви розробник - натисніть на кнопку у вигляді шестерні для того, щоб дізнатися, як
+                    використовувати API Django Library.</p>
+                <p>Користувач може входити до однієї з 4 груп: Гість, Користувач, Бібліотекар, Адмін. У кожної групи є
+                    свій набір прав, наприклад редагування, видалення, створення.</p>
+                <p>В проєкті було використано такі технології: Django, Django Rest Framework, PostgreSQL, HTML / CSS &
+                    Bootstrap, Docker, Docker-compose</p>
             </section>
 
             <aside class="right-block" id="style-1">
-                <p>Hi there!</p>
-                <p>As you can see from the footer - my name is Egor. Yes, I'm in the photo :)</p>
-
-                <p>I have been into Python development since September 2021. During all this time, I managed to take
-                    about 10 courses, read several books, about a hundred articles and much more.</p>
-
-                <p>The Django Library project for me is the first full-fledged project in which I used several
-                    technologies, and most importantly, completed it to the end. It was a great experience during which
-                    I realized that 80% practice and 20% theory is better than 80% theory and 20% practice.</p>
+                <p><b>Привіт!</b></p>
+                <p><b>Мене звати Егор.</b></p>
+                <hr style="width: 200px; height: 2px;">
+                <p>Я - Python розробник. В розробці з вересня 2021 року.</p>
+                <p>За цей час я встиг пройти близько 10 курсів, прочитати декілька книг та більше сотні статей. До того
+                    ж написав 5 проєктів, декілька з яких були комерційними (один з них є на гітхаб).</p>
+                <p>Цікавлюсь розробкою орієнтованих на юзера додатків та побудовою бізнес-процесів в компанії. Я
+                    орієнтований на якісний результат, тому в роботі завжди викладаюсь на повну.</p>
+                <p>Захоплююсь Arduino та люблю стратегічні ігри.</p>
             </aside>
         </main>
 
