--- a/static/css/index/home.css
+++ b/static/css/index/home.css
@@ -8,10 +8,9 @@
 
 .left-block {
     height: 400px;
-    width: 68%;
+    width: 62%;
     padding: 2%;
-    border-left: #f68032 3px solid;
-    border-bottom: #f68032 3px solid;
+    border-radius: 20px;
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
     overflow-y: hidden;
 }
@@ -21,12 +20,11 @@
 }
 
 .right-block {
-    border-top: #f68032 3px solid;
-    border-right: #f68032 3px solid;
     height: 400px;
-    width: 30%;
+    width: 35%;
     padding: 2%;
-    text-align: center;
+    border-radius: 20px;
+    border: #C59F3F 2px solid;
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
     overflow-y: hidden;
 }
@@ -51,10 +49,20 @@
 #style-1::-webkit-scrollbar {
     width: 4px;
     background-color: #F5F5F5;
+    visibility: hidden;
 }
 
 #style-1::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    background-color: #555;
+    background-color: #a4bdf5;
+}
+
+#style-1::-webkit-scrollbar-button {
+    height: 30px !important;
+    visibility: hidden;
+}
+
+p {
+    font-size: 2px;
 }
