--- a/static/css/index/index.css
+++ b/static/css/index/index.css
@@ -88,3 +88,19 @@ body {
     font-size: .9rem;
     height: 38px;
 }
+
+*::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar {
+    width: 6px;
+    background-color: #F5F5F5;
+    visibility: hidden;
+}
+
+*::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: rgb(38, 43, 48);
+}
