--- a/templates/home.html
+++ b/templates/home.html
@@ -5,50 +5,66 @@
     <link rel="stylesheet" href="{% static 'css/index/home.css' %}?{% now "U" %}">
     <main class=" h-100 w-100 d-flex flex-column">
 
-        <header class="text-center header-block">
-            {% if user.is_authenticated %}
-                <h3>Вітаю, {{ user.first_name }} {{ user.last_name }}!</h3>
-            {% else %}
-                <h3>Greetings, Guest!</h3>
-            {% endif %}
-        </header>
 
         <main class="w-100 d-flex justify-content-between main-block">
             <section class="left-block" id="style-1">
-                <p>Радий представити Вам проєкт "Django Library”, над яким я працював протягом 3-х місяців.</p>
-                <p>За час розробки я зміг покращити важливі для мене навички і наблизитись до своєї цілі - стати
-                    інженером.</p>
+                <header class="header-block">
+                    {% if user.is_authenticated %}
+                        <h3>Вітаю, {{ user.first_name }} {{ user.last_name }}!</h3>
+                    {% else %}
+                        <h3>Вітаю, друже!</h3>
+                    {% endif %}
+                </header>
+                <p>Ласкаво прошу у "Django Library". Це проєкт, над котрим я працював протягом 3-х місяців.</p>
+                <p>За час розробки я зміг покращити важливі для мене навички і наблизитись до своєї цілі - <span
+                        id="yellow-text">стати
+                    інженером</span>.</p>
                 <p>Моєю метою було створити застосунок, який би був максимально зручним для користувача, тому я навіть
                     трішки поглибився у верстку, і засвоїв HTML, CSS та Bootstrap.</p>
-                <p>Цей проєкт містить 2 види авторизації: безпосередньо в сервісі та через соціальні мережі. Всі обхідні
+                <p>Цей проєкт містить <span id="yellow-text">2 види авторизації</span>: безпосередньо в сервісі та через
+                    соціальні мережі. Всі обхідні
                     шляхи до сторінок закриті, Ви зможете отримати доступ до поширеного функціоналу тільки після
                     реєстрації. Як користувач, Ви можете ознайомитись зі списком авторів і книг, котрі представлені
                     Django Library, а також зарезервувати книгу, вказавши дату коли зобов’язуєтесь її повернути.</p>
-                <p>Ви отримаєте власний профіль, в якому ви зможете вказати особисту інформацію і встановити аватар.</p>
+                <p>Ви отримаєте <span id="yellow-text">власний профіль</span>, в якому ви зможете вказати особисту
+                    інформацію і встановити аватар.</p>
                 <p>Якщо Ви розробник - натисніть на кнопку у вигляді шестерні для того, щоб дізнатися, як
-                    використовувати API Django Library.</p>
+                    використовувати <span id="yellow-text">API Django Library</span>.</p>
                 <p>Користувач може входити до однієї з 4 груп: Гість, Користувач, Бібліотекар, Адмін. У кожної групи є
                     свій набір прав, наприклад редагування, видалення, створення.</p>
-                <p>В проєкті було використано такі технології: Django, Django Rest Framework, PostgreSQL, HTML / CSS &
-                    Bootstrap, Docker, Docker-compose</p>
+                <p><span id="yellow-text">В проєкті було використано такі технології</span>: Django, Django Rest
+                    Framework, PostgreSQL, HTML / CSS &
+                    Bootstrap, Docker, Docker-compose.</p>
             </section>
 
             <aside class="right-block" id="style-1">
-                <p><b>Привіт!</b></p>
-                <p><b>Мене звати Егор.</b></p>
-                <hr style="width: 200px; height: 2px;">
-                <p>Я - Python розробник. В розробці з вересня 2021 року.</p>
-                <p>За цей час я встиг пройти близько 10 курсів, прочитати декілька книг та більше сотні статей. До того
-                    ж написав 5 проєктів, декілька з яких були комерційними (один з них є на гітхаб).</p>
-                <p>Цікавлюсь розробкою орієнтованих на юзера додатків та побудовою бізнес-процесів в компанії. Я
+                <div class="d-flex justify-content-between">
+                    <div style="margin-top: 5%; text-align: center; ">
+                        <p><b>Привіт!</b></p>
+                        <p><b>Мене звати Єгор Ясинецький.</b></p>
+                        <hr style="width: 100%; height: 2px;">
+                    </div>
+                    <div class="photo-block">
+                        <div class="photo"></div>
+                    </div>
+                </div>
+
+                <p id="text-right-block">Я - Python розробник, маю <span id="yellow-text">більше року</span> досвіду в
+                    програмуванні.</p>
+                <p id="text-right-block">За цей час я встиг пройти близько <span id="yellow-text">10 курсів</span>,
+                    прочитати декілька книг та більше сотні статей. До того
+                    ж написав <span id="yellow-text">5 проєктів</span>, декілька з яких були <span id="yellow-text">комерційними</span>.
+                </p>
+                <p id="text-right-block">Цікавлюсь розробкою орієнтованих на юзера додатків та побудовою бізнес-процесів
+                    в компанії. Я
                     орієнтований на якісний результат, тому в роботі завжди викладаюсь на повну.</p>
-                <p>Захоплююсь Arduino та люблю стратегічні ігри.</p>
+                <p id="text-right-block">Захоплююсь Arduino та люблю стратегічні ігри.</p>
             </aside>
         </main>
 
         <footer class="text-center footer-block">
-            <span style="font-size: 14px;">You can find out more about the project on the <a
-                    href="">documentation page</a>.</span>
+            <span style="font-size: 15px;">Більше інформації про проект знаходиться на <a
+                    href="">сторінці документації</a>.</span>
         </footer>
     </main>
 {% endblock %}
