--- a/templates/home.html
+++ b/templates/home.html
@@ -15,23 +15,23 @@
                         <h3>Вітаю, друже!</h3>
                     {% endif %}
                 </header>
-                <p>Ласкаво прошу у "Django Library". Це проєкт, над котрим я працював протягом 3-х місяців.</p>
-                <p>За час розробки я зміг покращити важливі для мене навички і наблизитись до своєї цілі - <span
-                        id="yellow-text">стати
-                    інженером</span>.</p>
+                <p>Ласкаво прошу у &laquo;Django Library&raquo;. Це &ndash; проєкт, над котрим я працював протягом 3-х
+                    місяців.</p>
+                <p>За час розробки я зміг покращити важливі для мене навички та наблизитись до своєї цілі - <span
+                        id="yellow-text">стати інженером</span>.</p>
                 <p>Моєю метою було створити застосунок, який би був максимально зручним для користувача, тому я навіть
                     трішки поглибився у верстку, і засвоїв HTML, CSS та Bootstrap.</p>
                 <p>Цей проєкт містить <span id="yellow-text">2 види авторизації</span>: безпосередньо в сервісі та через
-                    соціальні мережі. Всі обхідні
-                    шляхи до сторінок закриті, Ви зможете отримати доступ до поширеного функціоналу тільки після
-                    реєстрації. Як користувач, Ви можете ознайомитись зі списком авторів і книг, котрі представлені
-                    Django Library, а також зарезервувати книгу, вказавши дату коли зобов’язуєтесь її повернути.</p>
-                <p>Ви отримаєте <span id="yellow-text">власний профіль</span>, в якому ви зможете вказати особисту
-                    інформацію і встановити аватар.</p>
+                    соціальні мережі. В процесі реєстрації користувач отримає лист на пошту з посиланням-підтвержденням.
+                    Це один з методів безпеки від бот-атак. Також, при авторизації, користувач має пройти капчу.</p>
+                <p>Після реєстрації ви отримаєте <span id="yellow-text">власний профіль</span>, в якому зможете вказати
+                    особисту
+                    інформацію і встановити аватар. </p>
                 <p>Якщо Ви розробник - натисніть на кнопку у вигляді шестерні для того, щоб дізнатися, як
                     використовувати <span id="yellow-text">API Django Library</span>.</p>
-                <p>Користувач може входити до однієї з 4 груп: Гість, Користувач, Бібліотекар, Адмін. У кожної групи є
-                    свій набір прав, наприклад редагування, видалення, створення.</p>
+                <p>Деякі функції обмежені правами доступу. В проекті реалізовані 4 групи прав: гість, юзер, бібліотекар,
+                    адмін.
+                    Саме тому дані знаходяться у повній безпеці</p>
                 <p><span id="yellow-text">В проєкті було використано такі технології</span>: Django, Django Rest
                     Framework, PostgreSQL, HTML / CSS &
                     Bootstrap, Docker, Docker-compose.</p>
@@ -40,7 +40,7 @@
             <aside class="right-block" id="style-1">
                 <div class="d-flex justify-content-between">
                     <div style="margin-top: 5%; text-align: center; ">
-                        <p><b>Привіт!</b></p>
+                        <p><b>Так, це я :)</b></p>
                         <p><b>Мене звати Єгор Ясинецький.</b></p>
                         <hr style="width: 100%; height: 2px;">
                     </div>
